--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -70,7 +70,7 @@
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
                 android:background="#FF8000"
-                android:text="Edit Profile"
+                android:text="Your Profile"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"/>
 
